--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_lecture-training.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_lecture-training.less
@@ -16,6 +16,7 @@
  .teacher-app {
      #collection-details-region {
      	  margin-top: 50px;
+          padding-top: 5px;
         @media @i-tab-landscape{
             margin-top: 0;
         }          
