--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -43,7 +43,11 @@
 #quiz-description-region{
     margin: 0 auto;
     max-width: 50%;
+    @media (max-width: 1230px){
+        max-width: 80%;
+    }    
     .pieceWrapper{
+        display: block;
         .quiz-info{
             padding: 20px !important;
             margin: 0;
@@ -97,6 +101,9 @@
         right: 0;
         margin: 0 auto;
         max-width: 50%;
+        @media (max-width: 1230px){
+            max-width: 80%;
+        }        
         #content-board{
             .box-shadow(0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12));
             @media (max-width: 1200px){
@@ -107,8 +114,8 @@
                     border: 0;
                     min-height: 460px !important;
                     max-width: 100%;
-                    @media @i-tab-landscape{
-                        margin-top: 50px;
+                    @media (max-width:1230px) {
+                            min-height: 360px !important;
                     }
                     #question-area{
                         .element-wrapper{
@@ -392,9 +399,36 @@
         float: right;
         position: static;
     }
+    @media (max-width:1230px){
+        visibility: visible;
+        background: none;
+        box-shadow: none;
+    }
     .container-grey{
     	background: none;
     	box-shadow: none;
+        @media (max-width:1230px){
+             position: fixed;
+            width: 100%;
+            left: 0;
+            bottom: 0;
+            text-align: center;
+            margin: 0 auto;
+            right: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            .box-shadow(0 0px 25px 8px rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12));
+            padding: 15px 0;
+        }
+        .timerStrip{
+            @media (max-width:1230px){
+                display: none;
+            }
+        }
+        .bold{
+            display: none;
+        }
         #completed-quiz{
             margin:0;
             padding: 0;
@@ -411,7 +445,12 @@
             position: absolute;
             top: -25px;
             right: 152px;
-           
+            @media (max-width:1230px) {
+                top:inherit;
+                position: static;
+                right: inherit;
+                padding: 8px;
+            }
             & > span{
                 // background: red;
                 & > span{
@@ -421,6 +460,9 @@
                      font-weight: bold;
                     color: #fff;
                      font-size: 1em;
+                     @media (max-width:1230px) {
+                         font-size: 0.9em;
+                     }
                     &:first-child{
                         margin-right: 2px;
                     }
@@ -431,6 +473,11 @@
             }
         }
     }
+    .container-grey:last-child{
+        @media (max-width:1230px){
+            display: none;
+        }
+    }
     .small-text{
     	padding: 10px 0;
     	border-bottom: 1px solid #dadada;
@@ -438,12 +485,15 @@
      .endQuiz {
         visibility: visible;
         text-align: center;
-        // border-bottom: 1px solid #dadada;
-    	// border-top: 0;
         position: absolute;
         top: -20px;
         right: 16px;
         border: 0;
+        @media (max-width:1230px) {
+            position: static;
+            top: inherit;
+            right: inherit;
+        }
          button {
             background: #459290;
             border: 2px solid #fff;
@@ -565,10 +615,6 @@
 	    font-size: 1.1em;
     	line-height: 1.5;
         border-radius: 8px;
-        @media @i-tab-landscape{
-            width: 32%;
-            font-size: 1em;
-        }
 	    i{
 	    	&:before{
 	    		padding-left: 5px;
