--- a/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/take-module/item-description/templates/top-panel.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/take-module/item-description/templates/top-panel.html
@@ -26,7 +26,9 @@
     <!-- Controls -->
     <div class="controls">
         
-        <a href="javascript:" id="top-panel-previous"  class="backward"><img src="wp-content/themes/walnut/walnut_student_assets/dev/images/previous.png" alt="" class="img-reponsive center-block"></a>
+        <a href="javascript:" id="top-panel-previous"  class="backward"><img src="wp-content/themes/walnut/walnut_student_assets/dev/images/previous.png" alt="" class="img-reponsive center-block">
+        <h4>Previous</h4>
+        </a>
         
         
     </div>
@@ -42,7 +44,9 @@
     <div class="controls">
         
 
-        <a href="javascript:" class="next" id="top-panel-question-done" class="forward"><img src="wp-content/themes/walnut/walnut_student_assets/dev/images/forward.png" alt="" class="img-reponsive center-block"></a>
+        <a href="javascript:" class="next" id="top-panel-question-done" class="forward"><img src="wp-content/themes/walnut/walnut_student_assets/dev/images/forward.png" alt="" class="img-reponsive center-block">
+        <h4>Next</h4>
+        </a>
         
     </div>
     </div> 
