match old layout with new one for quiz page

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/templates/quiz-layout.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/templates/quiz-layout.html
@@ -40,13 +40,13 @@
         </h4>
     </button>
     {{/studentTrainingModule}}
-    <div id="attempts-region"></div>
-    <div id="quiz-details-region"></div>
+    <div id="attempts-region" class="col-lg-10 col-lg-offset-1"></div>
+    <div id="quiz-details-region" class="col-lg-10 col-lg-offset-1"></div>
 </div>
 <div id="content-display-region"></div>
 
     {{^studentTrainingModule}}
-        <div class="row text-center">
+        <div class="text-center">
             <div class="col-lg-12">
                 <div class="all-d-best">
                     <i class="fa fa-thumbs-o-up fa-2x"></i> <span>All the Best ...</span>
