--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
@@ -1,13 +1,24 @@
 <div class="col-lg-12">
     <!-- <h4><span class="semi-bold">All</span> Content Pieces</h4> -->
     <div class="change-status none small">
-        Change status to: 
+        Change status to:
         <select class="form-control inline small">
             <option value="publish">Publish</option>
             <option value="archive">Archive</option>
         </select>
         <button class="btn btn-info btn-small"><i class="fa spinner"></i> Change Status</button>
     </div>
+
+    <div class="move-content none small">
+      Move to:
+
+      <select class="txtchapter form-control inline small">
+          <option value="publish">Publish</option>
+          <option value="archive">Archive</option>
+      </select>
+      <button class="btn btn-info btn-small"><i class="fa spinner"></i> Move</button>
+    </div>
+
     <table class="table table-bordered m-t-15" id="content-pieces-table" >
         <thead>
         <tr><th style="width:4%">
@@ -33,7 +44,7 @@
         </tbody>
     </table>
     <div class="change-status none small">
-        Change status to: 
+        Change status to:
         <select class="form-control inline small">
             <option value="publish">Publish</option>
             <option value="archive">Archive</option>
