--- a/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/view-module/module-description/templates/module-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/view-module/module-description/templates/module-description.html
@@ -1,20 +1,23 @@
 <div class='tiles white grid simple animated fadeIn'>
     <div class="grid-title">
         <div class="row">
-            <div class="col-md-6">
-                <h3 class="no-margin semi-bold">{{name}}</h3>
+            <div class="col-md-4">
+                <h3 class="no-margin semi-bold">
+                    <span>Lecture </span>
+                    {{name}}
+                </h3>
             </div>
-            <div class="col-md-6 b-l b-grey small-text">
-                <div class="row">
-                    <div class="col-md-6">
-                        <label class="form-label text-grey">Textbook</label>
-                            {{getTextbookName}}
-                        </div>
-                    <div class="col-md-6">
-                        <label class="form-label text-grey">Chapter</label>
-                            {{getChapterName}}
-                    </div>
-                </div>
+            <div class="col-md-4">
+                <h3 class="no-margin semi-bold">
+                <label class="form-label text-grey">Textbookk</label>
+                    {{getTextbookName}}
+                </h3>
+            </div>
+            <div class="col-md-4">
+                 <h3 class="no-margin semi-bold">
+                <label class="form-label text-grey">Chapter</label>
+                    {{getChapterName}}
+                 </h3>   
             </div>
         </div>
 
