resolved back button issue for quiz start page

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/templates/quiz-layout.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/templates/quiz-layout.html
@@ -27,8 +27,8 @@
 
     {{/quiz_report}}
     {{^studentTrainingModule}}
-        <div class="direction text-center goto-prev-page">
-                <div class="icon"><a href="javascript:" class="btn fab-content"><i class="fa fa-hand-o-left"></i></a></div>
+        <div class="direction text-center">
+                <div class="icon goto-prev-page"><a href="javascript:" class="btn fab-content"><i class="fa fa-hand-o-left"></i></a></div>
                 <p class="welcome-text">It's time to take a quiz</p>
         </div>
     {{/studentTrainingModule}}
