--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
@@ -2,10 +2,14 @@
     <!-- <h4><span class="semi-bold">All</span> Content Pieces</h4> -->
     <div class="change-status none small">
         Change status to:
-        <select class="form-control inline small">
+        <select id="status_dropdown" class="form-control inline small">
             <option value="publish">Publish</option>
             <option value="archive">Archive</option>
+            <option value="delete">Delete</option>
+            <option value="move">Move</option>
         </select>
+        <div id="destination_textbook"></div>
+        <div id="destination_chapter"></div>
         <button class="btn btn-info btn-small"><i class="fa spinner"></i> Change Status</button>
     </div>
 
