signin page fix

--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -681,7 +681,7 @@ nav.wallnut-nav .walnut-account > li > a:focus {
   position: relative;
 }
 .signin-card .signin-wrapper {
-  position: fixed;
+  position: absolute;
   width: 100%;
   z-index: 99999;
   top: 150px;
