--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_signin-signup.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_signin-signup.less
@@ -42,7 +42,7 @@
 .signin-card {
     position: relative;
     .signin-wrapper {
-        position: fixed;
+        position: absolute;
         width: 100%;
         z-index: 99999;
         top: 150px;
