--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -3028,3 +3028,4 @@ lesshat-selector {
 #myCanvas-miki .cbp_tmtimeline > li .contentPiece .text-success i:before {
   content: "\f058";
 }
+/*version 1.0.0.0 */
