fixed video lecture buttons issues for 12'' screen

--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -1969,7 +1969,7 @@ lesshat-selector {
 }
 .video-sidebar {
   position: absolute;
-  left: 0px;
+  left: -265px;
   z-index: 1;
   top: 150px;
   -webkit-transition-duration: 0.3s;
@@ -1982,18 +1982,8 @@ lesshat-selector {
   display: -ms-flexbox;
   display: flex;
 }
-@media (max-width) {
-  .video-sidebar {
-    left: -265px;
-  }
-}
 .video-sidebar.video-is-open {
-  left: -265px;
-}
-@media (max-width: 1230px) {
-  .video-sidebar.video-is-open {
-    left: 0px;
-  }
+  left: 0px;
 }
 .video-sidebar .video-lecture-parts {
   background: #eee;
@@ -2010,6 +2000,7 @@ lesshat-selector {
   -o-transition-duration: 0.3s;
   transition-duration: 0.3s;
   height: 60px;
+  cursor: pointer;
 }
 .video-sidebar .open-sidebar i {
   font-size: 2.5em;
@@ -2030,7 +2021,7 @@ lesshat-selector {
 .contentTime {
   left: 90px;
 }
-@media (max-width: 1295px) {
+@media (max-width: 1330px) {
   .contentTime {
     left: 0;
   }
@@ -2038,7 +2029,7 @@ lesshat-selector {
 .contentInfo {
   right: 90px;
 }
-@media (max-width: 1295px) {
+@media (max-width: 1330px) {
   .contentInfo {
     right: 0;
   }
@@ -3028,4 +3019,3 @@ lesshat-selector {
 #myCanvas-miki .cbp_tmtimeline > li .contentPiece .text-success i:before {
   content: "\f058";
 }
-/*version 1.0.0.0 */
