--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_signin-signup.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_signin-signup.less
@@ -46,6 +46,9 @@
         width: 100%;
         z-index: 99999;
         top: 150px;
+        @media @tablet {
+            top: 95px;
+        }
         .wrapped {
             .box-shadow(0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12));
             background: #fff;
