--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -686,6 +686,9 @@
         #submit-question{
             width: 100%;
         }
+        &.submit-pushed{
+            top: -209px;
+        }
     }
 
  }
