changed quiz summary page as per new desing

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/quiz-description/templates/quiz-description.html
@@ -5,9 +5,9 @@
                 <h3 class="no-margin semi-bold">
                     <label class="form-label text-grey">Quiz Name</label>
                     {{name}} 
-                    {{#responseSummary}} 
+<!--                     {{#responseSummary}} 
                         <span class="small text-info semi-bold block m-t-5">Taken on: <span class="bold">{{taken_on_date}}</span></span>
-                    {{/responseSummary}} 
+                    {{/responseSummary}}  -->
                 </h3>
             </div>
             <div class="col-md-4 b-r b-grey">
@@ -78,7 +78,7 @@
             </div-->
         </div>
 
-        <div class="row m-b-10 b-grey b-t">
+        <div class="row b-grey b-t">
             <div class="col-sm-12">
                 <h3 class="semi-bold"><label class="form-label text-grey">Quiz Instructions</label></h3>
                     {{&description.instruction}}
