--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-page.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-page.less
@@ -49,7 +49,6 @@
                      margin: 0;
                      .box-shadow(0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12));
                      .grid-title{
-                        border-left: 4px solid @dashboard-color;
                         padding: 20px 15px;
                         background: #eee;
                         .tools{
@@ -102,10 +101,8 @@
      #quiz-details-region {
          // margin-top: 20px;
          & > div {
-             padding-bottom: 5px;
              background: #F0F0F0;
              .box-shadow(0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12));
-             border-left: 4px solid @dashboard-color;
              .grid {
                  margin-bottom: 0;
                  .grid-title, .grid-body {
@@ -129,9 +126,8 @@
                          color: @quiz-link-color1;
                          line-height: 20px;
                          span {
-                             font-size: 0.9em;
                              line-height: 22px;
-                             color: @quiz-link-color1 !important;
+                             color: #f2593a !important;
                          }
                      }
                      .small-text {
@@ -165,9 +161,11 @@
                      }
                      h3 {
                          & > span {
-                             font-size: 0.9em;
+                             font-size: 1em;
                              line-height: 22px;
-                             color: @quiz-link-color1 !important;
+                             color: @quiz-link-color3 !important;
+                             font-weight: bold;
+                             text-transform: uppercase;
                          }
                      }
                      &:last-child {
@@ -181,25 +179,16 @@
                      background: @button-1-danger;
                      .box-shadow(0 3px 0 0 rgba(192, 204, 203, 0.9));
                      border: 0;
-                     line-height: 45px;
+                     width: 15%;
                     font-size: 1.1em;
-                     &:before, &:after {
-                         display: inline-block;
-                         font: normal normal normal 2.5em FontAwesome;
-                         color: darken(@button-1-danger, 10%);
-                     }
+                    color: #fff;
                      &:before {
-                         content: "";
-                         margin-right: 15px;
-                         float: left;
-                         background: url('../../images/dashboard_03.png') no-repeat;
-                         width: 46px;
-                         height: 46px;
-                     }
-                     &:after {
-                         content: "\f105";
-                         float: right;
-                         padding-left: 15px;
+                         content: "\f01d";
+                         padding-right: 15px;
+                         vertical-align: sub;
+                         display: inline-block;
+                         font: normal normal normal 1.5em FontAwesome;
+                         color: darken(@button-1-danger, 10%);                         
                      }
                  }
              }
