--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
@@ -30,16 +30,16 @@
 				    background: @dashboard-color;
 				    .box-shadow(0 3px 0 0 rgba(192, 204, 203, 0.9));
 				    border: 0;
-				    line-height: 45px;
+				    width: 15%;
+				    color: #fff;
 				    font-size: 1.1em;
-				    &:before{
-				    	content: "\f0ec";
+				    &:after{
+				    	content: "\f105";
 					    font: normal normal normal 1.5em FontAwesome;
 					    text-rendering: auto;
 					    -webkit-font-smoothing: antialiased;
-					    padding-right: 10px;
-					    color: lighten(@dashboard-color, 10%);
-					    vertical-align: inherit;
+					    padding-left: 10px;
+					    vertical-align: sub;
 				    }
 				}
 			}
