--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
@@ -48,8 +48,14 @@ h1, h2, h3, h4, h5 {
     font-weight: bold !important; //important for breaking Bootstrap default style
 }
 
-
-
+a{
+img{
+    border:0;
+    &:active{
+        border:0;
+    }
+}
+}
 
 // ---------------------------
 // SHIFTING HEADER 100PX DOWN AS NAVIGATION IS FIXED -----------
