--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
@@ -48,11 +48,20 @@ h1, h2, h3, h4, h5 {
     font-weight: bold !important; //important for breaking Bootstrap default style
 }
 
+
+
+
+// ---------------------------
+// MOZILLA WIERD BORDER FIX FOR IMAGES -----------
+// ---------------------------
+
 a{
 img{
     border:0;
+    outline: 0;
     &:active{
         border:0;
+        outline: 0;
     }
 }
 }
