--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_lecture-training.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_lecture-training.less
@@ -36,11 +36,11 @@
          	 .box-shadow(0 1px 6px 0 rgba(0, 0, 0, 0.12), 0 1px 6px 0 rgba(0, 0, 0, 0.12));
              margin-top: 50px;
              .grid-title, .grid-body {
-                 padding: 15px 10px;
+                 padding: 10px;
                  border-color: #eee;
                  .row{
                  	& > div{
-                 		padding: 30px 15px;
+                 		padding: 15px;
                  		.row{
                  			& > div{
                  				padding: 0 15px;
