--- a/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
@@ -9,7 +9,7 @@
                 <img src="wp-content/themes/walnut/walnut_student_assets/dev/images/walnut-logo.png" class="img-responsive center-block" alt="">
             </div>
             <div class="slogan">
-                Tough Outside. Smart Inside
+                <img src="wp-content/themes/walnut/walnut_student_assets/dev/images/walnut-tagline.png" class="img-responsive center-block" alt="">
             </div>
         </div>
     </nav>
