--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
@@ -101,6 +101,28 @@ img{
 
 
 
+// ---------------------------
+// CUSTOM BACK BUTTON FOR SPECIFIC PAGES -----------
+// ---------------------------
+
+.is-back{
+    position: absolute;
+    top: 20px;
+    width: 10%;
+    left: 20px;
+    a{
+        border: 2px solid #fff;
+        color: #fff;
+        font-family: open-sans;
+        font-size: 1.4em !important;
+        i{
+            padding-right: 26px;
+            font-size: 1.5em;
+        }
+    }
+}
+
+
 
 
 // ---------------------------
