changed hide and show logic for next prev buttons for quiz

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
@@ -7,10 +7,11 @@
 
 <div class="container-grey m-b-10 p-l-10 p-r-10 p-t-10 p-b-10 h-center quizActions"> 
     <!-- <span class="pull-left small" id="first_question"></span> -->
+    {{#replay}}
     <button type="button" id="previous-question" class="btn btn-info pull-left"> 
         <i class="fa fa-backward"></i> Previous 
     </button>
-
+    {{/replay}}
         {{#show_skip}}
             <button type="button" id="skip-question" class="btn btn-default btn-sm btn-small">
                 Skip <i class="fa fa-step-forward"></i>
@@ -34,9 +35,7 @@
 
 
     <!-- <span class="pull-right small" id="last_question"></span> -->
-    <button type="button" id="next-question" class="none btn btn-info pull-right">
-        Next <i class="fa fa-forward"></i> 
-    </button>
+
 
     <!-- <div class="text-center"> -->
         {{#show_hint}}
@@ -47,6 +46,12 @@
 
             <!-- <div><i class="small">(questions once skipped cannot be answered later)</i></div> -->
         {{/show_skip_helper_text}}
+
+        {{#replay}}
+        <button type="button" id="next-question" class="none btn btn-info pull-right">
+            Next <i class="fa fa-forward"></i> 
+        </button>
+        {{/replay}}
     <!-- </div> -->
     <div class="clearfix"></div>
 </div>
