--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
@@ -110,6 +110,7 @@ img{
     top: 20px;
     width: 10%;
     left: 20px;
+    z-index: 1031;
     a{
         border: 2px solid #fff;
         color: #fff;
